# IntegerFactorization

IntegerFactorization/: CMakeLists.txt
IntegerFactorization/IntegerFactorization/: CMakeLists.txt  IntegerFactorization.c  IntegerFactorization.h
